# curs-test

./: Auth.cpp  Auth.hpp  CMakeLists.txt  Database.cpp  Database.hpp  Integrator.cpp  Integrator.hpp  README.md  config.json  main.cpp
web/: login.html  main.html
